<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tran_default"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/common_padding">

            <RadioGroup
                android:id="@+id/rg_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin"
                android:background="@drawable/bg_setup_card"
                android:padding="@dimen/common_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_bg_parent"
                    android:layout_margin="@dimen/common_margin"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_tran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_margin"
                    android:text="@string/setup_bg_tran"
                    android:textColor="@android:color/white"
                    android:paddingLeft="@dimen/setup_bg_item_left"
                    android:textSize="@dimen/setup_content_size" />

                <RadioButton
                    android:id="@+id/rb_girl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_margin"
                    android:text="@string/setup_bg_girl"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/setup_content_size"
                    android:paddingLeft="@dimen/setup_bg_item_left"/>

                <RadioButton
                    android:id="@+id/rb_song"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_margin"
                    android:paddingLeft="@dimen/setup_bg_item_left"
                    android:text="@string/setup_bg_song"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/setup_content_size" />

<!--                <RadioButton
                    android:id="@+id/rb_custom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingLeft="10dp"
                    android:text="自定义"
                    android:textColor="@android:color/white"
                    android:textSize="18dp" />-->

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_setup_card"
                android:padding="@dimen/common_padding"
                android:layout_margin="@dimen/common_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_margin"
                    android:text="@string/setup_other_parent"
                    android:textColor="@android:color/white"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/sc_seek_tran"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_margin"
                    android:text="@string/setup_other_seek_tran"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/setup_content_size" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/sc_notification_control"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_margin"
                    android:text="@string/setup_other_notification_control"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/setup_content_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/common_margin"
                android:paddingLeft="@dimen/common_padding"
                android:background="@drawable/bg_setup_card">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_about_parent"
                    android:textColor="@android:color/white"
                    android:layout_margin="@dimen/common_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_about_author"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/setup_content_size"
                    android:layout_margin="@dimen/common_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_about_qq"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/setup_content_size"
                    android:layout_margin="@dimen/common_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_about_wx"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/setup_content_size"
                    android:layout_margin="@dimen/common_margin"/>

                <TextView
                    android:id="@+id/tv_github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_about_github"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/setup_content_size"
                    android:layout_margin="@dimen/common_margin"/>

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_about_version"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/setup_content_size"
                    android:layout_margin="@dimen/common_margin"/>

                <TextView
                    android:id="@+id/tv_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_about_check_update"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/setup_content_size"
                    android:background="?attr/selectableItemBackground"
                    android:layout_margin="@dimen/common_margin"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>